--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
 *.local
+
+# Temporarily exclude image files due to Git issues
+*.jpg
 
 # Editor directories and files
 .vscode/*
